Prevent scrolling on safari as apparently it only stops vertical scrolling when horizontal scrolling is disabled as well

--- a/backend/sass/common.blocks/_modal.scss
+++ b/backend/sass/common.blocks/_modal.scss
@@ -30,7 +30,7 @@
 }
 
 body[data-modal-open='true'] {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .modal__dialog {
